src/select2.less
.select2-container {
  box-sizing: border-box;
  display: inline-block;
  margin: 0;
  position: relative;
  vertical-align: middle;
  width: 100%;

  .select2-container-dropdown {
    position: absolute;
  }

  .select2-selection--single {
    box-sizing: border-box;
    cursor: pointer;
    display: block;
    height: 28px;
    user-select: none;
    -webkit-user-select: none;

    .select2-selection__rendered {
      display: block;
      padding-left: 8px;
      padding-right: 20px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .select2-selection__clear {
      position: relative;
    }
  }

  .select2-selection--multiple {
    box-sizing: border-box;
    cursor: pointer;
    display: block;
    min-height: 32px;
    user-select: none;
    -webkit-user-select: none;

    .select2-selection__rendered {
      display: inline-block;
      overflow: hidden;
      padding-left: 8px;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  .select2-search--inline {
    float: left;

    .select2-search__field {
      box-sizing: border-box;
      border: none;
      font-size: 100%;
      margin-top: 5px;
      padding: 0;

      &::-webkit-search-cancel-button {
        -webkit-appearance: none;
      }
    }
  }
}

.select2-dropdown {
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  position: absolute;
  left: -100000px;
  width: 100%;
  z-index: 1051;
}

.select2-results {
  display: block;
}

.select2-results__options {
  list-style: none;
  margin: 0;
  padding: 0;
}

.select2-results__option {
  padding: 6px;
  user-select: none;
  -webkit-user-select: none;

  &[aria-selected] {
    cursor: pointer;
  }
}

.select2-container--open .select2-dropdown {
  left: 0;
}

.select2-container--open .select2-dropdown--above {
  border-bottom: none;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.select2-container--open .select2-dropdown--below {
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.select2-search--dropdown {
  display: block;
  padding: 4px;

  .select2-search__field {
    padding: 4px;
    width: 100%;
    box-sizing: border-box;

    &::-webkit-search-cancel-button {
      -webkit-appearance: none;
    }
  }

  &.select2-search--hide {
    display: none;
  }
}

.select2-close-mask {
  border: 0;
  margin: 0;
  padding: 0;
  display: block;
  position: fixed;
  left: 0;
  top: 0;
  min-height: 100%;
  min-width: 100%;
  height: auto;
  width: auto;
  opacity: 0;
  z-index: 99;

  // styles required for IE to work

  background-color: #fff;
  filter: alpha(opacity=0);
}

.select2-hidden-accessible {
  border: 0 !important;
  clip: rect(0 0 0 0) !important;
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

.select2-container--default {
  .select2-selection--single {
    background-color: #fff;
    border: 1px solid #aaa;
    border-radius: 4px;

    .select2-selection__rendered {
      color: #444;
      line-height: 28px;
    }

    .select2-selection__clear {
      cursor: pointer;
      float: right;
      font-weight: bold;
    }

    .select2-selection__placeholder {
      color: #999;
    }

    .select2-selection__placeholder__option {
      display:none;
    }

    .select2-selection__arrow {
      height: 26px;
      position: absolute;
      top: 1px;
      right: 1px;
      width: 20px;

      b {
        border-color: #888 transparent;
        border-style: solid;
        border-width: 5px 4px 0;
        height: 0;
        left: 50%;
        margin-left: -4px;
        margin-top: -2px;
        position: absolute;
        top: 50%;
        width: 0;
      }
    }
  }

  &.select2-container--disabled {
    .select2-selection--single {
      background-color: #eee;
      cursor: default;

      .select2-selection__clear {
        display: none;
      }
    }
  }

  &.select2-container--open {
    .select2-selection--single {
      .select2-selection__arrow {
        b {
          border-color: transparent transparent #888;
          border-width: 0 4px 5px;
        }
      }
    }
  }

  .select2-selection--multiple {
    background-color: white;
    border: 1px solid #aaa;
    border-radius: 4px;
    cursor: text;

    .select2-selection__rendered {
      box-sizing: border-box;
      list-style: none;
      margin: 0;
      padding: 0 5px;
      width: 100%;

      li {
        list-style: none;
      }
    }

    .select2-selection__placeholder {
      color: #999;
      margin-top: 5px;
      float: left;
    }

    .select2-selection__clear {
      cursor: pointer;
      float: right;
      font-weight: bold;
      margin-top: 5px;
      margin-right: 10px;
    }

    .select2-selection__choice {
      background-color: #e4e4e4;
      border: 1px solid #aaa;
      border-radius: 4px;
      cursor: default;
      float: left;
      margin-right: 5px;
      margin-top: 5px;
      padding: 0 5px;
    }

    .select2-selection__choice__remove {
      color: #999;
      cursor: pointer;
      display: inline-block;
      font-weight: bold;
      margin-right: 2px;

      &:hover {
        color: #333;
      }
    }
  }

  &.select2-container--focus {
    .select2-selection--multiple {
      border: solid black 1px;
      outline: 0;
    }
  }

  &.select2-container--disabled {
    .select2-selection--multiple {
      background-color: #eee;
      cursor: default;
    }

    .select2-selection__choice__remove {
      display: none;
    }
  }

  &.select2-container--open.select2-container--above {
    .select2-selection--single,
    .select2-selection--multiple {
      border-top-left-radius: 0;
      border-top-right-radius: 0;
    }
  }

  &.select2-container--open.select2-container--below {
    .select2-selection--single,
    .select2-selection--multiple {
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
    }
  }

  .select2-search--dropdown {
    .select2-search__field {
      border: 1px solid #aaa;
    }
  }

  .select2-search--inline {
    .select2-search__field {
      background: transparent;
      border: none;
      outline: 0;
      box-shadow: none;
      -webkit-appearance: textfield;
    }
  }

  .select2-results > .select2-results__options {
    max-height: 200px;
    overflow-y: auto;
  }

  .select2-results__option {
    &[role=group] {
      padding: 0;
    }

    &[aria-disabled=true] {
      color: #999;
    }

    &[aria-selected=true] {
      background-color: #ddd;
    }

    .select2-results__option {
      padding-left: 1em;

      .select2-results__group {
        padding-left: 0;
      }

      .select2-results__option {
        margin-left: -1em;
        padding-left: 2em;

        .select2-results__option {
          margin-left: -2em;
          padding-left: 3em;

          .select2-results__option {
            margin-left: -3em;
            padding-left: 4em;

            .select2-results__option {
              margin-left: -4em;
              padding-left: 5em;

              .select2-results__option {
                margin-left: -5em;
                padding-left: 6em;
              }
            }
          }
        }
      }
    }
  }

  .select2-results__option--highlighted[aria-selected] {
    background-color: #5897fb;
    color: white;
  }

  .select2-results__group {
    cursor: default;
    display: block;
    padding: 6px;
    color: gray;
  }
}

// material style

select2.material {
  display: inline-block;
  vertical-align: top;


  .select2-container {
    width: 300px;

    .selection {
      padding: 0.4375em 0;
      border-top: 0.84375em solid transparent;
    }
  }

  .select2-container--default {
    .select2-selection--single {
      border: 0;
      border-bottom: 1px solid #ddd;
      border-radius: 0;
      height: 27px;

      &::before {
        content: ' ';
        display: block;
        position: absolute;
        bottom: 7px;
        background-color: #5A419E;
        height: 2px;
        width: 0%;
        left: 50%;
        transition: none;
      }

      .select2-selection__rendered {
        padding-left: 1px;
        line-height: inherit;
      }

      .select2-selection__placeholder {
        display: block;
        color: rgba(0, 0, 0, 0.38);
        transition: transform .3s;
        position: absolute;
        transform-origin: 0 21px;
        left: 0px;
        top: 20px;
      }
    }

    .select2-container--open {
      margin-top: -7px;
    }

    .select2-selection__placeholder__option {
      transform: translateY(-1.50em) scale(0.75) perspective(100px) translateZ(0.001px);
      width: 133.33333%;
    }

    .select2-selection__arrow {
      top: 20px;
    }


    &.select2-container--open,
    .select2-focused {
      .select2-selection--single::before {
        transition:
          width .3s cubic-bezier(0.12, 1, 0.77, 1),
          left .3s cubic-bezier(0.12, 1, 0.77, 1);
        width: 100%;
        left: 0%;

      }
    }

    .select2-dropdown {
      border-radius: 0;
      border: 0;
      box-shadow: 0 5px 5px rgba(0,0,0,.5);
    }

    .select2-results__option[aria-selected=true],
    .select2-results__option--highlighted[aria-selected]{
      background-color: rgba(0, 0, 0, 0.04);
      color: #000;
    }

    .select2-results__option[aria-selected=true] {
      color: #ff5722;
    }

    &.select2-container--disabled .select2-selection--single {
      background-image: linear-gradient(to right,rgba(0,0,0,.26) 0,rgba(0,0,0,.26) 33%,transparent 0);
      background-size: 4px 1px;
      background-repeat: repeat-x;
      background-color: transparent;
      background-position: 0 bottom;
      border: 0;
    }
  }

  &.ng-invalid.ng-touched .select2-container--default .select2-selection--single {
    border-bottom-color: red;

    &::before {
      background-color: red;
    }
  }
}

